Fixed starting color of clock

--- a/clock.css
+++ b/clock.css
@@ -24,6 +24,7 @@
     max-width: 80%;
     font-size: 7.5rem;
     text-shadow: 0 0 5px rgb(255, 0, 0);
+    color: rgb(255, 0, 0);
 }
 
 .gradient {
